# prek

./: .gitignore  .pre-commit-config.yaml  BENCHMARK.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DIFF.md  Dockerfile  LICENSE  README.md  SKILL.md  _typos.toml  a  build.rs  dist-workspace.toml  flake.nix  mise.toml  mkdocs.yml  pr_details.json  prek.schema.json  prek.toml  pyproject.toml  typos.toml
.config/: nextest.toml  taplo.toml  tombi.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  renovate.json5
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/fixture/: Dockerfile
.github/scripts/: hyperfine-comment.sh  hyperfine-run-benchmarks.sh  hyperfine-setup-test-env.sh  (+1 more)
benches/: prek.rs
crates/prek-consts/: Cargo.toml
crates/prek-consts/src/: env_vars.rs  lib.rs
docs/: authoring-hooks.md  benchmark.md  builtin.md  changelog.md  cli.md  compatibility.md  configuration.md  cookbook.md  debugging.md  diff.md  faq.md  index.md  installation.md  integrations.md  languages.md  quickstart.md  requirements.in  requirements.txt  todo.md  usage.md  workspace.md
scripts/: build-npm-packages.py  generate-ci-matrix.py  generate_ci_matrix.py  hyperfine-run-benchmarks.sh  pty_check.py
src/: archive.rs  cleanup.rs  config.rs  env_vars.rs  fs.rs  git.rs  hook.rs  identify.rs  main.rs  path.rs  process.rs  run.rs  store.rs  workspace.rs
src/cli/: gc.rs  (+11 more)
tests/: auto_update.rs  builtin_hooks.rs  clean.rs  gc.rs  hook_impl.rs  install.rs  language.rs  list.rs  meta_hooks.rs  run.rs  selector.rs  sensible_regex.rs  try_repo.rs  validate.rs  workspace.rs
(+344 files in other folders)
